[bdist_wheel]
universal = 0

[metadata]
name = eml_parser
description = Python EML parser library
long_description = file: README.md
long_description_content_type = text/markdown
license = AGPLv3+
license_file = LICENSE
author = Georges Toth
author_email = georges.toth@govcert.etat.lu
url = https://github.com/GOVCERT-LU/eml_parser
keywords =
    email
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Communications :: Email

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >= 3.7
install_requires =
    python-dateutil
    cchardet
    typing; python_version < "3.5"

[options.packages.find]
exclude =
    e2e
    tests

[options.package_data]
eml_parser = py.typed

[options.extras_require]
file-magic =
    file-magic
docs =
    sphinx
    sphinx-autodoc-typehints
    sphinx-rtd-theme
dev =
    pylint
    mypy
    flake8
    flake8-bandit
    flake8-comprehensions
    flake8-docstrings
    pep8-naming
test =
    pytest
    coverage


[mypy]
show_error_context = True
show_column_numbers = False
ignore_missing_imports = True
disallow_incomplete_defs = True
disallow_untyped_defs = True
disallow_untyped_calls = False
warn_no_return = True
warn_redundant_casts = True
warn_unused_ignores = True
strict_optional = True
check_untyped_defs = False


[flake8]
max-line-length = 240
docstring-convention = google

ignore = E111,E114,E121,E123,E125,E126,S101,E131,E122,E501,E127,W503,W504
